--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,6 @@ jobs:
       with: 
         username: ${{ secrets.REGISTRY_USERNAME}}
         password: ${{ secrets.REGISTRY_PASSWORD}}
-        repository: yiren1105/github-action
+        registry: yiren1105/github-action
         dockerfile: "./Dockerfile"
         tag_with_ref: true
