--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,14 +12,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - name: Build the Docker image
-      uses: docker/build-push-action@v2
-      with: 
-        username: ${{ secrets.REGISTRY_USERNAME}}
-        password: ${{ secrets.REGISTRY_PASSWORD}}
-        registry: yiren1105/github-action
-        dockerfile: "./Dockerfile"
-        tag_with_ref: true
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+          
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: true
+          tags: user/app:latest
+#       - name: Build the Docker image
+#         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#       - name: Build the Docker image
+#         uses: docker/build-push-action@v2
+#         with: 
+#           username: ${{ secrets.REGISTRY_USERNAME}}
+#           password: ${{ secrets.REGISTRY_PASSWORD}}
+#           registry: yiren1105/github-action
+#           dockerfile: "./Dockerfile"
+#           tag_with_ref: true
