--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,24 +25,25 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
           
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
-          push: true
-          tags: user/app:latest
-#       - name: Build the Docker image
-#         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-#       - name: Build the Docker image
+#       -
+#         name: Build and push
 #         uses: docker/build-push-action@v2
-#         with: 
-#           username: ${{ secrets.REGISTRY_USERNAME}}
-#           password: ${{ secrets.REGISTRY_PASSWORD}}
-#           registry: yiren1105/github-action
-#           dockerfile: "./Dockerfile"
-#           tag_with_ref: true
+#         with:
+#           context: .
+#           file: ./Dockerfile
+#           platforms: linux/amd64,linux/arm64,linux/386
+#           push: true
+#           tags: user/app:latest
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Build the Docker image
+        uses: docker/build-push-action@v2
+        with: 
+          username: ${{ secrets.REGISTRY_USERNAME}}
+          password: ${{ secrets.REGISTRY_TOKEN}}
+          registry: hub.docker.com/repository/docker
+          repository: yiren1105/github-action
+          dockerfile: "./Dockerfile"
+          tag_with_ref: true
