--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+
         
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -27,23 +23,14 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
           
-#       -
-#         name: Build and push
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           file: ./Dockerfile
-#           platforms: linux/amd64,linux/arm64,linux/386
-#           push: true
-#           tags: user/app:latest
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-      - name: Build the Docker image
-        uses: docker/build-push-action@v1.1.0
+        run: docker build . --file Dockerfile --tag ${{ secrets.REGISTRY_USERNAME }}/github-action:$(date +%s)
+        
+      - name: Push the Docker image
+        uses: mr-smithers-excellent/docker-build-push@v4
         with: 
-          username: ${{ secrets.REGISTRY_USERNAME}}
-          password: ${{ secrets.REGISTRY_TOKEN}}
-          registry: hub.docker.com/repository/docker
-          repository: yiren1105/github-action
-          dockerfile: "./Dockerfile"
-          tags: ${{env.GIT_SHORT_SHA}}
+          name: yiren1105/github-action
+          registry: docker.io  
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+          dockerfile: ./Dockerfile
