--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,30 +19,12 @@ jobs:
           password: ${{ secrets.REGISTRY_TOKEN }}
           repository: yiren1105/github-action
           tag_with_ref: true
-#   build:
-
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v2
-        
-
-        
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.REGISTRY_USERNAME }}
-#           password: ${{ secrets.REGISTRY_TOKEN }}
-          
-#       - name: Build the Docker image
-#         run: docker build . --file Dockerfile --tag ${{ secrets.REGISTRY_USERNAME }}/github-action:$(date +%s)
-        
-#       - name: Push the Docker image
-#         uses: mr-smithers-excellent/docker-build-push@v4
-#         with: 
-#           name: yiren1105/github-action
-#           registry: docker.io  
-#           username: ${{ secrets.REGISTRY_USERNAME }}
-#           password: ${{ secrets.REGISTRY_TOKEN }}
-#           dockerfile: ./Dockerfile
+      
+      - name: Send slack messages
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+        env:
+#           GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }} # optional
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
