--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,11 +7,13 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        with:
+          ref: ${{github.ref}}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
