--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,12 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
-
+env:
+  PUSH_DOCKER_IMAGE: true
+  SEND_SLACK_MESSAGE: true
+  REPOSITORY: yiren1105/github-action
+  REGISTRY: docker.io
+  REGISTRY_USERNAME: yiren1105
 
 jobs:
   push_to_registry:
@@ -13,14 +18,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{github.ref}}
-
+      - name: Prepare env vars for docker image build 
+        if: env.PUSH_DOCKER_IMAGE == 'true'
+        run: | 
+          export GIT_SHORT_SHA=$(git rev-parse --short HEAD)
+          echo "GIT_SHORT_SHA=$GIT_SHORT_SHA" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE=$REGISTRY/$REPOSITORY:$GIT_SHORT_SHA" >> $GITHUB_ENV
+        
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-          repository: yiren1105/github-action
-          tag_with_ref: true
+          repository: ${{ env.REPOSITORY }}
+          tags: ${{env.GIT_SHORT_SHA}}
       
       - name: Send slack messages
         uses: 8398a7/action-slack@v3
