--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,9 @@ jobs:
           export GIT_SHORT_SHA=$(git rev-parse --short HEAD)
           echo "GIT_SHORT_SHA=$GIT_SHORT_SHA" >> $GITHUB_ENV
           echo "DOCKER_IMAGE=$REGISTRY/$REPOSITORY:$GIT_SHORT_SHA" >> $GITHUB_ENV
-        
+      - name: change hello.py before build 
+        run: | 
+          sed -i -e 's/world/worrr/g' hello.py 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
